# Reloader

./: CMakeLists.txt  README.md
Reloader/: CMakeLists.txt
Reloader/include/Reloader/: Entity.h  ID.h  MainCharacter.h
Reloader/src/Reloader/: MainCharacter.cpp  main.cpp
Utils/: CMakeLists.txt
Utils/include/Utils/: Functions.h  IniFile.h
Utils/src/Utils/: IniFile.cpp
